name:                diagrams-stu-smith-github-io
version:             0.1.0.0
synopsis:            Diagrams generator for hackification.com
description:         Please see README.md
homepage:            http://github.com/stu-smith/diagrams.stu-smith.github.io
license:             MIT
license-file:        LICENSE
author:              Stu Smith
maintainer:          stusmith1977@gmail.com
copyright:           2016 Stu Smith
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hilbert
                     , RayTracing
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-svg
  default-language:    Haskell2010

executable diagrams-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diagrams-stu-smith-github-io
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-svg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stu-smith/diagrams.stu-smith.github.io
